pkg/agentgateway/translator/testdata/gateways/istio-proxy-waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: proxy
      port: 15088
      protocol: istio.io/PROXY
      allowedRoutes:
        namespaces:
          from: Same

---
# Output
output:
- gateway:
    Name: waypoint
    Namespace: default
  resource:
    bind:
      key: 15088/default/waypoint
      port: 15088
      tunnelProtocol: PROXY
- gateway:
    Name: waypoint
    Namespace: default
  resource:
    listener:
      bindKey: 15088/default/waypoint
      key: default/waypoint.proxy
      name:
        gatewayName: waypoint
        gatewayNamespace: default
        listenerName: proxy
      protocol: HBONE
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: waypoint
    namespace: default
  spec: null
  status:
    conditions:
    - lastTransitionTime: fake
      message: ""
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Successfully programmed Gateway
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: fake
        message: No errors found
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: No errors found
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: fake
        message: No errors found
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: fake
        message: No errors found
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: proxy
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
